syntax = "proto3";
package grpc;

option go_package = "github.com/MrAnacletus/Lab2-Distribuidos/prueba/proto/github.com/MrAnacletus/Lab2-Distribuidos/prueba/proto";

message HelloRequest {
    string Name = 1;
}

message HelloReply {
    string Message = 1;
}

message Jugada{
    int32 ID = 1;
    int32 Jugada = 2;
}

message Resultado{
    int32 ID = 1;
    int32 Estado = 2;
}

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc RequestPozo (RequestPozoActual) returns (ResponsePozoActual);
    rpc GetJugada (Jugada) returns (Resultado);
}

message RequestPozoActual{
    int32 Pozo = 1;
}

message ResponsePozoActual{
    int32 Pozo = 1;
}

service PozoService {
    rpc RequestPozo (RequestPozoActual) returns (ResponsePozoActual);
}